--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=Marvel' rel='stylesheet'>
         <title>My First Landing Page</title>
         <link rel="stylesheet" href="./style.css">    
     </head>
@@ -16,10 +17,12 @@
             </ul>
         </header>
         <section class="hero">
-            <div class="hero-text-1">This Website is Awesome</div>
-            <div class="hero-text-2">This website has some subtext that goes under the main tittle. It's a smaller font and the color is lower contrast</div>
+          <div class="hero-right">
+            <div class="hero-text-1">This website is awesome</div>
+            <div class="hero-text-2">This website has some subtext that goes here under the main tittle. It's a smaller font and the color is lower contrast.</div>
             <button class="hero-button">Sign up</button>
-            <div class="hero-image-placeholder">This is a place holder for an image</div>
+          </div>
+            <div class="hero-image-placeholder">This is a placeholder for an image</div>
         </section>
         <section class="information">
             <div class="info-header">Some random information.</div>
