Add final styling

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="all-illustrations">
                 <div class="illustration">
                     <div class="image"></div>
-                    <div class="image-text"></div>
+                    <div class="image-text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="illustration">
                     <div class="image"></div>
-                    <div class="image-text"></div>
+                    <div class="image-text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="illustration">
                     <div class="image"></div>
-                    <div class="image-text"></div>
+                    <div class="image-text">This is some subtext under an illustration or image</div>
                 </div>
                 <div class="illustration">
                     <div class="image"></div>
-                    <div class="image-text"></div>
+                    <div class="image-text">This is some subtext under an illustration or image</div>
                 </div>
             </div>
         </section>
